<resources>
    <string name="app_name">One Click Installer &amp; Backup</string>
    <string name="app_folder_name">One_Click_Installer</string>

    <!-- Navigation Drawer. -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Welcome Screens. -->
    <string name="slide_1_title">One Click Installer\n&amp; Backup</string>
    <string name="slide_1_desc">The easiest way to install and backup apps.</string>
    <string name="slide_2_title">Root Information</string>
    <string name="slide_3_title">Permissions Required</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="intro2_no_root">Quick Installation not supported</string>
    <string name="intro2_root_granted">Yeeaah!! Root granted!</string>
    <string name="intro2_root_not_granted">Oops! Device not Rooted</string>
    <string name="exit">Exit</string>
    <string name="permission_granted">Permissions Granted</string>
    <string name="intro3_grant_permissions">Grant Permissions</string>
    <string name="intro3_needs_permissions">Needs Permissions</string>
    <string name="intro4_select_the_backup_folder">Select the Backup Folder</string>
    <string name="intro4_select_folder">Select Folder</string>
    <string name="intro4_selected_folder">Selected Folder</string>
    <string name="intro4_checkbox_internal">Scan whole Internal Storage</string>
    <string name="intro4_checkbox_default">Scan default folder only</string>
    <string name="sd_card_permission_message">Please choose the root directory of SD card to grant One Click Installer &amp; Backup permission to operate></string>
    <string name="sd_card_permission_title">Hint</string>
    <string name="sd_card_permission_error">Cannot Write to External SD</string>

    <!-- InstallBackupScreens -->
    <string name="preference_path_to_scan">pathToScan</string>
    <string name="app_loader_process_dialog_message">Loading</string>
    <string name="notification_delete_default">Deleting...</string>
    <string name="error_delete_failed">Error: Deletion failed for :</string>
    <string name="success_delete">Deleted Successfully</string>
    <string name="readpermission_preference">readPermission</string>
    <string name="notification_install_default">Installation success.</string>
    <string name="error_install_failed">Installation Failed for following apks:</string>
    <string name="success_install">Installation Completed Successfully!</string>
    <string name="rationale_storage">Needs storage permission</string>
    <string name="returned_from_app_settings_to_activity">Returned from settings</string>
    <string name="not_installed_textview_heading">Not Installed Apps:</string>
    <string name="not_backedup_textview_heading">Not Installed Apps:</string>
    <string name="cancelled">Cancelled</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="notification_backup_default">Backup Successful</string>
    <string name="success_backup_notification">Backed up Successfully</string>
    <string name="success_backup">Backup Success</string>
    <string name="backup_info_no_backup">No Backup</string>
    <string name="backup_info_backup">Backed up</string>
    <string name="backup_info_backup_new_version">Backup new version</string>
    <string name="no_apps_found">No apps found. Swipe down to refresh or Change the folder to scan</string>
    <string name="backup_title">Backup</string>
    <string name="no_selection">No apps selected!</string>
    <string name="backup_stop_button_error">Warning!</string>
    <string name="backup_stop_button_message">Are you sure to stop the backup process?</string>
    <string name="installer_title">Installer</string>
    <string name="installed">Installed</string>
    <string name="not_insalled">Not Installed</string>
    <string name="install_title">Install</string>
    <string name="install_stop_button_message">Are you sure to stop the installation?</string>
    <string name="backup_no_update_toast_message">No updated apk found. Press select all again to select</string>
    <string name="backup_available_update_toast_message"> updated apks selected. Press again to select all</string>

    <!--Settings-->
    <string name="edittextpreference_title">Apk Directory</string>
    <string name="prefrence_rateapp_title">Show us your support.</string>
    <string name="preference_rateapp_dialogTitle">Rate: One Click Installer</string>
    <string name="aboutus">About</string>
    <string name="edittextpreference_default_summary">Select Folder</string>
    <string name="toolbar_title">Settings</string>

    <!--Donate-->
    <string name="donate_screen_bottom_message">©Sharon Alexander\n\u0020\u0020\u0020One Click Installer</string>
    <string name="donate_small_button">Donate to Developer</string>
    <string name="purchase_error">Error</string>
    <string name="purchase_already_owned">Error in purchase</string>

    <!--Ads-->
    <string name="ads_app_id">ca-app-pub-1740451756664908~5774446072</string>
    <string name="ads_interstitial_activity_settings_video">ca-app-pub-1740451756664908/4490699279</string>
    <string name="ads_interstitial_folder_video">ca-app-pub-1740451756664908/7251179275</string>
    <string name="ads_banner_installer_main">ca-app-pub-1740451756664908/3013966072</string>
    <string name="ads_banner_backup_main">ca-app-pub-1740451756664908/1907651278</string>
    <string name="ads_native_installer_unit_id">ca-app-pub-1740451756664908/8674038477</string>
    <string name="ads_native_backup_unit_id">ca-app-pub-1740451756664908/2627504873</string>

    <!--Menu-->
    <string name="menu_fragment_layout">Layout</string>
    <string name="menu_action_mode_select_all">Select All</string>
    <string name="menu_action_mode_delete">Delete</string>
    <string name="menu_drawer_install">Install</string>
    <string name="menu_drawer_backup">Backup</string>
    <string name="menu_drawer_more">More</string>
    <string name="menu_drawer_settings">Settings</string>
    <string name="menu_drawer_about">About</string>

    <!--Layouts-->
    <string name="swipe_down_to_refresh">Swipe Down to Refresh</string>
    <string name="empty_list_change_directory">Empty List?\nTry changing folder to scan</string>
    <string name="stop">Stop</string>

    <!--AppInfo Dialog-->
    <string name="dialog_name">Name</string>
    <string name="dialog_version">Version:</string>
    <string name="dialog_app_size">App Size:</string>
    <string name="dialog_path">Path:</string>
    <string name="dialog_package">Package</string>

    <!--Notification-->
    <string name="notification_deleting">Deleting:</string>
    <string name="notification_backing_up">Backing up:</string>
    <string name="notification_installing">Installing:</string>

</resources>
