<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/folder_icon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/folder" />

            <TextView
                android:id="@+id/slide4_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/intro4_select_the_backup_folder"
                android:textColor="@android:color/white"
                android:textSize="@dimen/slide_title"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxEntire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/intro4_checkbox_internal" />

            <CheckBox
                android:id="@+id/checkBoxDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="5dp"
                android:text="@string/intro4_checkbox_default" />

            <Button
                android:id="@+id/folder_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/stop_button_shape_cancel"
                android:gravity="center"
                android:text="@string/intro4_select_folder" />

            <TextView
                android:id="@+id/selected_path_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/intro4_selected_folder"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:visibility="gone" />

            <TextView
                android:id="@+id/selected_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:visibility="gone" />

            <Button
                android:id="@+id/welcome_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="52dp"
                android:background="@drawable/stop_button_shape_success"
                android:gravity="center"
                android:text="@string/start"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>