<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/lock_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_slide3_heading"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/text_slide3_heading"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/lock" />

    <TextView
        android:id="@+id/text_slide3_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lock_image"
        android:layout_centerHorizontal="true"
        android:text="@string/slide_3_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold" />

    <Button
        android:id="@+id/grant_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_slide3_heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/stop_button_shape_cancel"
        android:text="@string/intro3_grant_permissions" />

    <TextView
        android:id="@+id/permissions_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grant_permissions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/intro3_needs_permissions"
        android:visibility="gone" />
</RelativeLayout>