<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/appicon"
        android:layout_width="57dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_name"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        app:layout_constraintLeft_toRightOf="@+id/appicon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="13dp"
        android:text="@string/dialog_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appicon" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_app_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ver" />

    <TextView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="7dp"
        android:text="@string/dialog_path"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size" />

    <TextView
        android:id="@+id/apppackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_package"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
        app:layout_constraintLeft_toRightOf="@+id/appicon"
        app:layout_constraintTop_toBottomOf="@+id/appname" />

    <TextView
        android:id="@+id/appversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/appicon"
        app:layout_constraintLeft_toRightOf="@+id/ver"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp" />

    <TextView
        android:id="@+id/appsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/appversion"
        app:layout_constraintLeft_toRightOf="@+id/size"
        android:layout_marginLeft="39dp"
        android:layout_marginRight="39dp" />

    <TextView
        android:id="@+id/apppath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/appsize"
        app:layout_constraintLeft_toRightOf="@+id/path"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp" />

    <Button
        android:id="@+id/okbutton"
        android:layout_width="368dp"
        android:layout_height="41dp"
        android:text="Button"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/apppath"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteY="177dp" />
</android.support.constraint.ConstraintLayout>